index page ideas

--- a/templates/dontoverdose/index.html
+++ b/templates/dontoverdose/index.html
@@ -1,6 +1,39 @@
 {% extends 'base.html' %}
 {%load static %}
 {% block content %}
+<!-- 
+
+GOOD IDEAS
+--- https://www.hhs.gov/overdose-prevention/
+---
+---
+---
+
+
+TOP LEFT
+-- Logo  
+TOP RIGHT 
+-- search bar
+
+    LINKS 
+------ HOME    ------ ABOUT ------ GRAPHS? -----
+1. Put a description or VIDEO? of WHY this is important
+2. Explain what the APP does (our motto/ slogan) 
+    -- this helps UH view data
+    -- NEED to view prescriptions being made (for government and doctors)
+    -- PORTAL
+    --
+
+3. Dynamic graphs that update
+4. 
+
+
+
+
+
+ -->
+
+
 <div class="row padding">
     <div class="column">
         <h1>HOME</h1>
