Comments on what I want

--- a/templates/dontoverdose/displayDrug.html
+++ b/templates/dontoverdose/displayDrug.html
@@ -10,3 +10,6 @@
     {% endfor%}
 </div>
 {% endblock %}
+<!--
+    this needs to show the top 10 prescribers in the database for whatever type of drug is shown.
+-->
