--- a/templates/dontoverdose/displayPrescribers.html
+++ b/templates/dontoverdose/displayPrescribers.html
@@ -13,3 +13,7 @@
     </p>
 </div>
 {% endblock %}
+
+<!--
+    this needs to show the drugs that they have prescribed, and the average number of each type of drug that all prescribers prescribe.
+-->
