--- a/templates/dontoverdose/searchPrescriber.html
+++ b/templates/dontoverdose/searchPrescriber.html
@@ -3,6 +3,10 @@
 {% block content %}
     <form name="form" method="get" action="{% url 'displayPrescriber' %}">
         <h2>Search For A Prescriber</h2>
+        <!-- npi --> 
+        <label for='NPI'>Enter the NPI:</label>
+        <input type="text" name='NPI' id='npi'>
+        <br><br>
         <!-- first name --> 
         <label for='first_name'>Enter the first name:</label>
         <input type="text" name='first_name' id='fname'>
@@ -15,17 +19,25 @@
         <label for='prescriber_gender'>Enter the gender:</label>
         <input type="text" name='prescriber_gender' id='gender'>
         <br><br>
-        <!-- credentials --> 
-        <label for='prescriber_credentials'>Enter the credentials:</label>
-        <input type="text" name='prescriber_credentials' id='credentials'>
-        <br><br>
         <!-- location --> 
         <label for='location'>Enter the State:</label>
         <input type="text" name='location' id='state'>
         <br><br>
+        <!-- credentials --> 
+        <label for='prescriber_credentials'>Enter the credentials:</label>
+        <input type="text" name='prescriber_credentials' id='credentials'>
+        <br><br>
         <!-- specialty --> 
-        <label for='prescriber_specialty'>Enter the last name:</label>
+        <label for='prescriber_specialty'>Enter the specialty:</label>
         <input type="text" name='prescriber_specialty' id='specialty'>
+        <br><br>
+        <!-- opioid dude? --> 
+        <label for='opioid_dude?'>Deals Opioid? (True/False):</label>
+        <input type="text" name='opioid_dude?' id='isopioidprescriber'>
+        <br><br>
+        <!-- total --> 
+        <label for='total'>Total Prescriptions:</label>
+        <input type="text" name='total' id='totalprescriptions'>
         <br><br>
         <button type="submit">Search</button>
     </form>
