--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
    
     <!-- MAIN PART of base-->
     <div class= "padding">
-        <h1>The Solution to Opioids</h1>
+        <h1>Know Opioids</h1>
     </div>
     <br>
     <br>
