--- a/templates/dontoverdose/allDrugs.html
+++ b/templates/dontoverdose/allDrugs.html
@@ -6,82 +6,27 @@
         <h1>DRUGS</h1>
     </div>
 </div>
-    
 
-<br>
-{% comment %} <br>
-<h2>This shows all of the drugs RAW</h2>
-<div >
-    {% for drug in drug_list %}
-    <p>
-        {{drug.drugname}}
-        {{drug.isopioid}}
-    </p>
-    {% endfor %}
-</div> 
+<br><br>
 
-<br><br> {% endcomment %}
-
-<div>
+<div class="centered">
     <table>
         <tr>
-            <td><form action=" /addDrink" method="GET">
-                <input type="submit" value="Add New Drink">
-                </form>
-            </td>
-            <td>
-                <form action="/logout" method="POST">
-                    <input type="submit" value="Logout">
-                </form>
-            </td>
-        </tr>
-    </table>
-
-    <br><br>
-    <h2>This shows all of the drugs more organized</h2>
-    <table>
-        <tr>
-            <th></th>
-            <th>Drug Name</th>
-            <th></th>
+            <th>    </th>
+            <th style="text-align: center;">Drug Name</th>
             <th>Is Opioid?</th>
-            {% comment %} <th>Price</th> {% endcomment %} 
         </tr>
-
         {% for drug in drug_list %}           
             <tr>
-                <td>
-                    <input type="button" value="Edit" onclick="editItem(<%=expressVar[i].drinkID%>)">
-                    <!-- <%=expressVar[i].vehicle_id%> -->
-                </td>
+               <td> </td>
                 <td style="text-align: center;">
                     {{drug.drugname}}   
                 </td>
                 <td style="text-align: center;">
                     {{drug.isopioid}}   
                 </td>
-                {% comment %} <td></td>
-                <td style="text-align: center;">
-                    {% for drug in drug_list %}
-                    <p>
-                    
-                        {{drug.isopioid}}
-                    </p>
-                </td> {% endcomment %}
-                {% comment %} <td style="text-align: center;">
-                    <%=expressVar[i].drinkIngredients%>
-                </td>
-                <td>
-                    <%=expressVar[i].drinkPrice%>
-                </td>
-                <td> <input type="button" value="Delete"
-                        onclick="deleteItem(<%=expressVar[i].drinkID%>,'<%=expressVar[i].drinkName%>')">
-                </td> {% endcomment %}
             </tr>
-        
         {% endfor %}
-
-        </table>
-
+    </table>
 </div>
 {%endblock%}
