--- a/templates/dontoverdose/searchDrug.html
+++ b/templates/dontoverdose/searchDrug.html
@@ -1,13 +1,31 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <form name="form" method="get" action="{% url 'displayDrug' %}">
-        <label for='name'>Enter the drug name:</label>
-        <input type="text" name='name' id='drugname'>
-        <br><br>
-        <label for='is_opiate'>Enter if drug is Opioid (TRUE/FALSE):</label>
-        <input type="text" name='is_opiate' id='isopioid'>
-        <br><br>
-        <button type="submit">Search</button>
-    </form>
+    {% comment %} Go back to drugs page {% endcomment %}
+
+    <a class="nav-link" href="{% url 'allDrugs' %}"><button>See all drugs</button></a>
+    <br><br>
+    <div class="row padding">
+        <form name="form" id="drugForm" method="get" action="{% url 'displayDrug' %}">
+            <label for='name'>Enter the drug name:</label>
+            <input type="text" name='name' id='drugname'>
+            <br><br>
+            {% comment %} <label for='is_opiate'>Enter if drug is Opioid (TRUE/FALSE):</label>
+            <input type="text" name='is_opiate' id='isopioid'>
+            <br><br> {% endcomment %}
+            <button type="submit">Search</button>
+            <button type="reset">Clear</button>
+        </form>
+    </div>   
+
+    {% comment %} <table>
+        <tr>
+            <td>
+                <a class="nav-link" href="{% url 'allDrugs' %}"><button>Cancel</button></a>
+            </td>
+            <td>
+                <a class="nav-link" href="{% url 'allDrugs' %}"><button>Cancel</button></a>
+            </td>
+        </tr>
+    </table> {% endcomment %}
 {% endblock %}
