--- a/templates/dontoverdose/addPrescriber.html
+++ b/templates/dontoverdose/addPrescriber.html
@@ -10,7 +10,7 @@
                 <td>
                     <!-- NPI --> 
                     <label for='NPI'>Enter the NPI:</label>
-                    <input type="text" name='NPI' id='npi'>
+                    <input type="text" name='NPI' id='npi' autofocus>
                 </td>
             </tr>
             <tr>
