--- a/templates/dontoverdose/allDrugs.html
+++ b/templates/dontoverdose/allDrugs.html
@@ -8,6 +8,8 @@
 </div>
 
 <br><br>
+<a class="nav-link" href="{% url 'searchDrug' %}"><button>Find A Drug</button></a>
+<br><br>
 
 <div class="centered">
     <table>
