--- a/static/css/our.css
+++ b/static/css/our.css
@@ -7,7 +7,6 @@ mustartd: rgba(236,212,35,1.00)
 html, body {
     max-width: 100%;
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 .background{
     width: 100%;
@@ -81,6 +80,10 @@ html, body {
     border-style: solid;
     color: rgba(236,212,35,1.00);
     text-decoration: none;
+    margin-top: 6rem;
+    margin-right: 6rem;
+    margin-bottom: 6rem;
+    margin-left: 6rem;
     width: 4rem;
     padding-right: 3rem;
     padding-top: 7px;
@@ -119,29 +122,8 @@ html, body {
     height: 2rem;
    color: rgba(78,105,146,1.00);
    text-decoration: none;
+}
 
-}
-.table-dark {
-    margin: auto;
-    width: 75%;
-    align-content: center;
-}
-.drugtable{
-    width: 50%;
-    float:right;
-    padding-right: 10rem;
-    height: 20rem;
-    
-}
-.poop{
-    color: rebeccapurple;
-}
-.drugfacts{
-    width: 50%;
-    height: 20rem;
-    background: rgba(155,228,226,1.00);
-    border-radius: 50px;
-}
 .viewdrugs{
     height: 20rem;
     width: 100%;
@@ -155,6 +137,10 @@ html, body {
     border-radius: 30px;
     width: 100%;
 }
+.enough{
+    position: relative;
+    top: -100%;
+}
 .tophead div .navbar-brand {
     font-weight: 400;
     font-size: 14px;
@@ -163,29 +149,45 @@ html, body {
     height: 10rem;
     margin-top: 5rem;
 }
-.table-wrapper-scroll-y my-custom-scrollbar{
+.tablesize{
     position: relative;
-    height: 20rem;
-    width: 50%;   
+    left:35%
 }
-.tablesize {
-    width: 50%;
+.tablesize-p{
+    position: relative;
+    width: 100%
 }
 th{
-    color: red;
+    border-top: 2px;
+    color: white;
+    background: rgba(0,0,0,0.80)
+    }
+th, td {
+    color: black;
+    border-bottom: 1px solid #ddd;
+    text-align: left;
+    padding: 5px;
 }
-.boxtop{
-    position: relative;
-    z-index: 100;
-    height: 15rem;
-    padding-top: 10rem;
-    margin-bottom: 10rem;
+tr:nth-child(even) {
+    background-color:rgba(255,241,6,0.27);
 }
-.daddy{
-    position: fixed;
-    bottom: 0%;
+tr:nth-child(even):hover {
+    background-color:rgba(255,241,6,0.10);
 }
 
+.parent{
+    display: grid;
+    grid-template-columns:auto auto;
+}
+.card1{
+    width: 100%;
+    padding-right: 15rem;
+}
+.card2{
+    width: 100%;
+    padding-right: 15rem;
+    border:thin groove rgba(151,151,151,0.20)
+}
 /* this is the scrolling stuff*/
 .scroll {
     background: url('img/background.jpg') no-repeat center;
