nice little index (:

--- a/templates/dontoverdose/contact.html
+++ b/templates/dontoverdose/contact.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {%load static %}
 {% block content %}
-<hr>
+<br><br><br><br><br><br><br><br><br><br>
+<h1>Conctact Page baby</h1> 
 <div class="container">
 <div class="row">
  <div class="col-lg-3 col-md-6 col-12">
@@ -22,5 +23,5 @@
  </div>
 </div>
 </div>
-<hr>
+
 {%endblock%}
