--- a/templates/dontoverdose/about.html
+++ b/templates/dontoverdose/about.html
@@ -9,16 +9,12 @@
 3. Click to see oulr sand report blah blah
 
 
-
-
-
-
-
-
-
-
-
-
-
-
  -->
+ {% extends 'base.html' %}
+{%load static %}
+{% block content %}
+
+<br><br><br><br><br><br><br><br>
+<h1>About page</h1>
+
+{%endblock%}
