Makes input boxes required

--- a/templates/dontoverdose/addPrescriber.html
+++ b/templates/dontoverdose/addPrescriber.html
@@ -10,63 +10,63 @@
                 <td>
                     <!-- NPI --> 
                     <label for='NPI'>Enter the NPI:</label>
-                    <input type="text" name='NPI' id='npi' autofocus>
+                    <input type="text" name='NPI' id='npi' autofocus required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- first name --> 
                     <label for='first_name'>Enter the first name:</label>
-                    <input type="text" name='first_name' id='fname'>
+                    <input type="text" name='first_name' id='fname' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- last name --> 
                     <label for='last_name'>Enter the last name:</label>
-                    <input type="text" name='last_name' id='lname'>
+                    <input type="text" name='last_name' id='lname' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- gender --> 
                     <label for='prescriber_gender'>Enter the gender:</label>
-                    <input type="text" name='prescriber_gender' id='gender'>
+                    <input type="text" name='prescriber_gender' id='gender' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- credentials --> 
                     <label for='prescriber_credentials'>Enter the credentials:</label>
-                    <input type="text" name='prescriber_credentials' id='credentials'>
+                    <input type="text" name='prescriber_credentials' id='credentials' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- location --> 
                     <label for='location'>Enter the State:</label>
-                    <input type="text" name='location' id='state'>
+                    <input type="text" name='location' id='state' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- specialty --> 
                     <label for='prescriber_specialty'>Enter the specialty:</label>
-                    <input type="text" name='prescriber_specialty' id='specialty'>
+                    <input type="text" name='prescriber_specialty' id='specialty' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- ISOPOIOD --> 
                     <label for='opioid_dealer'>Opioid Dealer? (True/False):</label>
-                    <input type="text" name='opioid_dealer' id='isopioidprescriber'>
+                    <input type="text" name='opioid_dealer' id='isopioidprescriber' required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- TOTAL --> 
                     <label for='total'>Enter the total number of prescriptions:</label>
-                    <input type="text" name='total' id='totalprescriptions'>
+                    <input type="text" name='total' id='totalprescriptions' required>
                 </td>
             </tr>
         </table>
