--- a/templates/dontoverdose/allPrescribers.html
+++ b/templates/dontoverdose/allPrescribers.html
@@ -66,6 +66,7 @@
                             {{prescriber.totalprescriptions}}
                         </td>
                         <td>
+                            <a class="mybutton" onclick=>Delete</a>
                             <a class="mybutton"href="{% url 'deletePrescriber' NPI=prescriber.npi %}">Delete</a>
                         </td>
                     </tr>
