--- a/templates/dontoverdose/searchPrescriber.html
+++ b/templates/dontoverdose/searchPrescriber.html
@@ -14,11 +14,11 @@
         <br><br> {% endcomment %}
         <!-- first name --> 
         <label for='first_name'>Enter the first name:</label>
-        <input type="text" name='first_name' id='fname'>
+        <input type="text" name='first_name' id='fname' required>
         <br><br>
         <!-- last name --> 
         <label for='last_name'>Enter the last name:</label>
-        <input type="text" name='last_name' id='lname'>
+        <input type="text" name='last_name' id='lname' required>
         <br><br>
         <!-- gender --> 
         {% comment %} <label for='prescriber_gender'>Enter the gender:</label>
