--- a/templates/dontoverdose/updatePrescriber.html
+++ b/templates/dontoverdose/updatePrescriber.html
@@ -16,56 +16,56 @@
                 <td>
                     <!-- first name --> 
                     <label for='first_name'>Enter the first name:</label>
-                    <input type="text" name='first_name' id='fname' value="{{prescriber.fname}}" autofocus >
+                    <input type="text" name='first_name' id='fname' value="{{prescriber.fname}}" autofocus required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- last name --> 
                     <label for='last_name'>Enter the last name:</label>
-                    <input type="text" name='last_name' id='lname' value="{{prescriber.lname}}">
+                    <input type="text" name='last_name' id='lname' value="{{prescriber.lname}}" required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- gender --> 
                     <label for='prescriber_gender'>Enter the gender:</label>
-                    <input type="text" name='prescriber_gender' id='gender' value="{{prescriber.gender}}">
+                    <input type="text" name='prescriber_gender' id='gender' value="{{prescriber.gender}}" required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- credentials --> 
                     <label for='prescriber_credentials'>Enter the credentials:</label>
-                    <input type="text" name='prescriber_credentials' id='credentials' value="{{prescriber.credentials}}">
+                    <input type="text" name='prescriber_credentials' id='credentials' value="{{prescriber.credentials}}" required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- location --> 
                     <label for='location'>Enter the State:</label>
-                    <input type="text" name='location' id='state' value="{{prescriber.state}}">
+                    <input type="text" name='location' id='state' value="{{prescriber.state}}" required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- specialty --> 
                     <label for='prescriber_specialty'>Enter the specialty:</label>
-                    <input type="text" name='prescriber_specialty' id='specialty' value="{{prescriber.specialty}}">
+                    <input type="text" name='prescriber_specialty' id='specialty' value="{{prescriber.specialty}}" required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- ISOPOIOD --> 
                     <label for='opioid_dealer'>Opioid Dealer? (True/False):</label>
-                    <input type="text" name='opioid_dealer' id='isopioidprescriber' value="{{prescriber.isopioidprescriber}}">
+                    <input type="text" name='opioid_dealer' id='isopioidprescriber' value="{{prescriber.isopioidprescriber}}" required>
                 </td>
             </tr>
             <tr>
                 <td>
                     <!-- TOTAL --> 
                     <label for='total'>Enter the total number of prescriptions:</label>
-                    <input type="text" name='total' id='totalprescriptions' value="{{prescriber.totalprescriptions}}">
+                    <input type="text" name='total' id='totalprescriptions' value="{{prescriber.totalprescriptions}}" required>
                 </td>
             </tr>
         </table>
